KFSMI-2856 : updated property to reflect that the KSB UI will run locally

--- a/build.properties
+++ b/build.properties
@@ -330,7 +330,8 @@ rice.url=${rice.server.url}/${rice.application}
 # the base url for rice images that can reside outside the application
 rice.externalizable.images.url=${rice.server.url}/${rice.application}/static/images/
 # the base url for the service bus struts module
-rice.ksb.url=${rice.server.url}/${ksb.application}
+# the KSB UI runs locally - so keep at the base application URL
+rice.ksb.url=${application.url}/${ksb.application}
 
 rice.kim.url=${rice.server.url}/${kim.application}
 # the workflow deployment environment that this deployment of the application should use (can only differ from ${build.environment} if ${rice.use.standalone.workflow} is true)
