KULCAP-992: Capital asset authorization. Functional but not complete.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -771,7 +771,6 @@ error.gl.correction.persisted.origin.entries.missing=The origin entries associat
 error.gl.correction.remove.group.requires.database="Remove group from processing" requires the "Database" system option.
 gl.correction.persisted.origin.entries.missing=The origin entries associated with this document are unavailable.
 gl.correction.restricted.functionality.search.results.label=The search results are unavailable because the selected origin entry group is too large. 
-gl.correction.persisted.origin.entries.missing=The origin entries associated with this document are unavailable.
 
 error.gl.FiscalYearCannotBeNullForBalanceTypeA2 = Fiscal Year cannot be null for balance type A2
 error.gl.FiscalPeriodCannotBeNullForBalanceTypeA2 = Fiscal Period Code cannot be null for balance type A2
@@ -2124,6 +2123,7 @@ error.asset.location.no.asset.location.detail.line = Location change must contai
 error.asset.location.campus.code.required =  A Campus Code is required.
 error.asset.location.building.code.required = A Building code is required.
 error.asset.location.room.number.required = A Room Number is required.
+error.asset.authorization = User "{0}" is not authorized to modify asset "{1}".
 
 # ********** Asset Separate related messages *********
 error.max.payments.limit = Cannot split an asset that contains 10 or more payments.  
