KULBUD-108 added items to support handling

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1503,6 +1503,7 @@ message.budget.documentNotBudgetable = Document not budgetable - cleanup mode ac
 message.budget.system.not.active = System not active for any fiscal year.
 message.budget.system.multiple.active = System active for multiple fiscal years. 
 message.budget.system.session.notCleaned= Previous Budget Construction Session not cleaned up.
+message.budget.system.session.timeOut = Budget Construction Session timed out.
 message.budget.systemViewOnly = System is in view only mode. 
 message.budget.viewOnly = View only access granted.
 message.budget.editAccess = Edit access granted.
