--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1768,8 +1768,8 @@ message.batch.successfullyHold= Batch successfully hold.
 message.batch.successfullyRemoveHold= Hold successfully removed from batch.
 
 
-message.batch.cancel= You are about to Cancel the following Batch {0}. Once a batch has been cancelled none of the payments in it can be re-opened for payment.
-message.batch.hold= You are about to Hold the following Batch {0}.
+message.batch.cancel= You are about to Cancel the following Batch {0}. Once a batch has been cancelled none of the payments in it can be re-opened for payment. Are you sure you wish to cancel this batch?
+message.batch.hold= You are about to Hold the following Batch {0}. Are you sure you wish to hold this batch? 
 message.batch.removeHold= You are about to Remove a Hold on the following Batch {0}.
 
 success.paymentUpdate.saved=Your status update was successful.<br>
