KULCAP-1022:CAB- edit the compaires the sub object code when paymnets are added ( add asset global) KULCAP-953: progress on reviewing and improving unit test coverage: cab.document.service.impl.*

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2320,6 +2320,7 @@ error.addl.charge.pending = You must first allocate additonal charges.
 error.trade.in.pending = You must first allocate trade-in allowance for selected lines with trade-in indicator.
 question.trade.in.indicator.existing = Trade-in indicator is found in the selected lines but no trade-in allowance found. Trade-in allowance may not be invoiced yet. Would you like to continue?
 question.skip.asset.numbers.to.asset.global = Asset numbers are found set by PurAp users and will be ignored when create asset. Would you like to continue?
+question.different.object.sub.types = The object sub-type code on the payment line(s) are not in agreement with each other for selected line items per parameter
 error.fractional.quanity = Fractional quantity invoiced is allowed only if <1.
 error.merge.with.pretagging = Merge is disallowed because the selected merge lines include more than 1 pre-tagging data entries.
  
