KULCAP-1027 	 CAMS allows Salvage > Base Cost

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2076,7 +2076,7 @@ error.document.paymentApplication.unappliedAmountCannotBeEmptyOrZero=Unapplied a
 error.document.paymentApplication.unappliedCustomerNumberCannotBeBlank=Customer number on unapplied line cannot be blank.
 
 # Capital Assets Management
-#error.document.asset.locked=Asset {0} is locked by document <a href="{1}">#{2}</a>. 
+error.document.records_no_selected=Records were not selected. Please, mark the records you want to delete or validate.
 error.document.inactive.field={0} is inactive. 
 # ** Batch **
 error.batch.depreciation.assetsNotFound=There are no assets eligible for depreciation.
@@ -2168,7 +2168,7 @@ error.disallowed.merge.retirement.reason.code = Please use "Merge" action on Ass
 error.disallowed.retirement.reason.code = This retirement reason code '{0}' is not allowed to use by current user.
 error.disallowed.merge.separate.reason.code = Only members of workgroup MERGE_SEPARATE_WORKGROUP has access to initiate documents with retirement reason code '{0}'.
 error.disallowed.raze.reason.code = Only members of workgroup RAZE_WORKGROUP has access to initiate documents with retirement reason code '{0}'.
-error.multiple.asset.retired = You can't retire multiple assets with current retirment reason code.
+error.multiple.asset.retired = You are not allowed to retire multiple assets.
 #*********************************************
 
 # *** Asset Transfer/Retirment/Creation for GL posting 
@@ -2240,6 +2240,7 @@ error.campus.tag.number.required = Tag number must exist on asset edit screen pr
 #***********************************************************
 
 #***** Start Asset Global Messages ***********
+error.asset.salvage.amount.not.valid=The salvage amount cannot be greater than the base amount.
 error.asset.inventory.status.code.required = Asset status should be specified to validate asset location.
 error.asset.inventory.status.code.required.for.payment = Asset status should be specified to validate asset payment.
 error.acquisition.code.required = Acquisition type code should be specified to validate asset payment.
