--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1083,9 +1083,10 @@ error.itemParser.invalidUOMCode=Invalid Unit Of Measure code {0} in item {1}.
 error.itemParser.invalidNumericValue=Invalid value '{0}' for item property {1} in line {2}: {1} should be numeric.
 error.itemParser.itemLine=Errors in parsing item lines in file {0}.
 error.itemParser.itemProperty=Errors in parsing item properties in line {0}.
+error.item.unitOfMeasureCode.invalid=The item unit of measure code {0} does not exist.
 
 errors.item.account.negative=Account: {0} must not be negative.
-
+error.item.unit.of.measure.code.invalid=The item unit of measure code {0} does not exist.
 #B2B
 message.b2b.multiple.requisitions=The contents of your shopping cart are not fully listed on this requisition. This occurs when shopping carts contain products from more than one vendor. The other requisitions that were created from this shopping session can be accessed from the action list.
 message.b2b.po.retransmit.success=Purchase Order was resent successfully.
