KULCAP-1034: Asset Separate should check for CAPITALIZATION_LIMIT_AMOUNT and prevent KFS-CAM Manager

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2263,8 +2263,8 @@ error.document.type.code.not.allowed = Document type code\: {0} is not allowed t
 error.valid.capital.asset.type.required = Asset type code should be a valid value.
 error.asset.location.validation.dependecy = Valid asset type code and status code value(s) are required to validate asset location information.
 error.asset.payment.validation.dependecy = Valid asset type code and status code value(s) are required to validate asset payment information.
-error.capital.asset.payment.min.limit = To create a capital asset the payment lines must equal {0} or more for each asset. A non-capital asset can be created for assets under {0} by changing asset status to "N" non-capital active and acquisition type to "A" non-capital.
-error.noncapital.asset.payment.max.limit = Non-capital asset payment amount must be less than {0} for each asset. A capital asset can be created by changing asset status code to one of [A,C,N,S] and acquisition type code to one of [F,G,S,T]. 
+error.capital.asset.payment.min.limit = To create a capital asset the payment lines must equal ${0} or more for each asset. A non-capital asset can be created for assets under {0} by changing asset status to "N" non-capital active and acquisition type to "A" non-capital.
+error.noncapital.asset.payment.max.limit = Non-capital asset payment amount must be less than ${0} for each asset. A capital asset can be created by changing asset status code to one of [A,C,N,S] and acquisition type code to one of [F,G,S,T]. 
 error.payment.amount.invalid = Payment amount must be positive.
 error.invalid.fin.object.sub.type.code = {0} for this payment is not a valid grouping per {1}.
 error.document.posting.date.required = Financial document posting date is required when acquisition type is new.
@@ -2276,6 +2276,7 @@ error.separate.asset.total.cost.not.match.payment.total.cost = Total cost of Ass
 error.separate.asset.already.separated = Asset to be separated was already separated by document number(s) {0}.
 error.invalid.acquisition.income.object.code = Income object code {0} from the acqustion table does not exist in the current fiscal year '{1}' for chart '{2}'.
 error.change.asset.total.amount.disallow = The total cost of the asset has changed from ${0} to ${1}. This is not allowed when you are approving a document. 
+error.separate.asset.below.threshold = Separate Source Amount for new asset '{0}' must equal to ${1} or more.
 #***** End Asset Global Messages ***********
 
 note.trickleDownInactivation.inactivatedSubAccounts=The following Sub-Account(s) were inactivated: {0}.
