Addition of periodic thread dumper (currently on by default) to aid in troubleshooting of performance issues in the test environments.

--- a/build.properties
+++ b/build.properties
@@ -473,3 +473,6 @@ spring.ide.support.file.line.suffix=</config>
 spring.ide.support.datadictionary.files=**/datadictionary/**/*.xml
 
 classpath.resource.prefix=/WEB-INF/classes/
+
+periodic.thread.dump=true
+periodic.thread.dump.seconds=300
