KULCAP-1026: Repair history incident dates must now be unique.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2114,6 +2114,9 @@ error.asset.fabrication.lifeLimit.required=Years expected to retain asset is a r
 error.asset.fabrication.lifeLimit.negative=Years expected to retain asset should be a positive number.
 error.asset.org.owner.account.inactive=Organization Owner Account is either expired or closed.
 
+# ********** Asset Repair History related messages *********
+error.duplicate.incident.date = Incident date should be unique.
+
 # ********** Asset Location Global related messages *********
 error.asset.location.invalid.capital.asset.number =Capital Asset Number "{0}" is not valid.
 error.asset.location.invalid.campus.code = Campus Code "{0}" for Capital Asset "{1}" is not valid.
