--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" output="test/classes" path="test/unit/src"/>
 	<classpathentry kind="src" output="test/classes" path="test/integration/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="TOMCAT_LIB_HOME/servlet-api.jar"/>
+	<classpathentry kind="var" path="TOMCAT_LIB_HOME/servlet-api.jar" sourcepath="/TOMCAT_SRC/servletapi"/>
 	<classpathentry kind="var" path="TOMCAT_LIB_HOME/jsp-api.jar"/>
 	<classpathentry kind="var" path="DRIVERS_DIRECTORY/ojdbc14.jar"/>
 	<classpathentry kind="var" path="DRIVERS_DIRECTORY/mysql-connector-java-5.0.5-bin.jar"/>
@@ -27,7 +27,7 @@
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-pool-1.2.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/db-ojb-1.0.4-kuali-mods-debug.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/displaytag-1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/dwr-1.1.4.jar"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/dwr-1.1.4.jar" sourcepath="C:/java/projects/kfs-dependencies/dwr-1.1.4-src.zip"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/fop-0.20.5.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/itext-1.4.8.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/mail-1.4.jar"/>
@@ -39,10 +39,10 @@
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/saaj-1.2.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/spring-2.0.4.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/spring-modules-ojb-0.6.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/struts-1.2.9.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/struts-el-1.2.9.jar"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/struts-1.2.9.jar" sourcepath="C:/java/projects/kfs-dependencies/struts-1.2.9-src.zip"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/struts-el-1.2.9.jar" sourcepath="C:/java/projects/kfs-dependencies/struts-1.2.9-src.zip"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/taglibs-jstl-1.1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/taglibs-standard-1.1.2.jar"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/taglibs-standard-1.1.2.jar" sourcepath="C:/java/projects/kfs-dependencies/taglibs-jstl-and-standard-1.1.2-src.zip"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xalan-2.7.0.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xalan-serializer-2.7.0.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xercesImpl-2.7.1.jar"/>
@@ -51,7 +51,7 @@
 	<classpathentry kind="lib" path="test/lib/junit-3.8.1.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xpp3_min-1.1.3.4.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jasperreports-2.0.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-lang-2.3.jar"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-lang-2.3.jar" sourcepath="C:/java/projects/kfs-dependencies/commons-lang-2.3-sources.jar"/>
 	<classpathentry kind="lib" path="build/external/appserver/commons-cli-1.0.jar"/>
 	<classpathentry kind="lib" path="build/external/appserver/commons-logging.jar"/>
 	<classpathentry kind="lib" path="build/external/appserver/connector-1_5.jar"/>
@@ -73,7 +73,7 @@
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/javassist-3.3.ga.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jboss-common-core-2.0.4.GA.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/persistence-api-1.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-api-0.9.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-api-0.9.4-SNAPSHOT.jar" sourcepath="C:/java/projects/rice/api"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-0.9.4-SNAPSHOT.jar" sourcepath="/rice"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/cxf-2.1.3.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxb-api-2.1.jar"/>
