KFSMI-151: remove CashReceiptHeader BO which is no longer needed

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -810,7 +810,7 @@ error.document.creditCardReceipt.bankMustExistWhenBankEnhancementEnabled=If the 
 cashDrawer.status.open= Open
 cashDrawer.status.closed= Closed
 cashDrawer.status.locked= Locked
-message.cashDrawer.alreadyOpen=The cash drawer for verification unit "{0}" has already been opened by Cash Management document {1}.<br><br>You will not be able to create a new Cash Management document until document {1} has been finalized or canceled.
+message.cashDrawer.alreadyOpen=The cash drawer for campus {0} has already been opened by Cash Management document {1}.<br><br>You will not be able to create a new Cash Management document until document {1} has been finalized or canceled.
 
 # Deposit
 deposit.type.final= Final
@@ -823,7 +823,7 @@ error.deposit.missingBankAccount=Bank Account Number is required
 error.deposit.unknownBankAccount=Unable to find bank account {0} for bank {1}
 error.deposit.nonDepositedVerifiedCashReceipt=Verified Cash Receipt Document #{0} must be deposited for this to be a final deposit.
 error.deposit.cashDepositDidNotBalance=The cash amount that was deposited {0} did not balance with the currency and coin amount from cash receipts {1}.
-error.deposit.notEnoughCashToCompleteDeposit=The {0} requested for the deposit (${1}) exceeds the {0} amount in the cash drawer (${2}).
+error.deposit.notEnoughCashToCompleteDeposit=The {0} requested for the deposit, ${1}, exceeds the {0} amount in the cash drawer, ${2}.
 error.deposit.cashieringChecksMustBeDeposited=Cashiering Check #{0} must be part of a deposit.
 
 # Deposit Wizard
@@ -847,7 +847,7 @@ error.document.cashieringTransaction.cashCountCannotBeNegative={0} is negative, 
 error.document.cashieringTransaction.checkAmountCannotBeNegative={0} is negative, and therefore not a valid check amount for check with description {1}.
 error.document.cashieringTransaction.newItemInProcess.amountCannotBeNegative=A new Item in Process cannot be for a negative amount.
 error.document.cashieringTransaction.openItemInProcess.reducedAmountCannotBeNegative=The reduced amount for Item in Process {0} cannot be negative.
-error.document.cashieringTransaction.cashAmountExceedsDrawerAmount=The requested {0} amount ({1}) must be less than the amount currently in the cash drawer {2}.
+error.document.cashieringTransaction.cashAmountExceedsDrawerAmount=The requested {0} amount, {1}, must be less than the amount currently in the cash drawer {2}.
 error.document.cashieringTransaction.moneyInAndMoneyOutDoNotBalance=The Money In and Money Out portions of this cashiering transaction do not balance.
 error.document.cashieringTransaction.cannotPayOffAdvanceWithAdvance=Item in Process {0} cannot be paid back with a new item in process.
 error.document.cashieringTransaction.newItemInProcessInFuture=New Item in Process must be opened today or before today.
