KULBUD-66, KULBUD-67, KULBUD-76

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
@@ -124,7 +124,7 @@ footer.orgObjectSummary = Organization Object Summary -
 footer.orgAccountObjectSummary = Organization Account / Object Summary -
 footer.orgAccountFundingDetail = Organization Account Funding Detail -
 footer.orgPositionFunding = Organization Position Funding -  
-footer.orgMonthlySummary = Organization Monthly Summary -
+footer.orgMonthlySummary = Organization Monthly Object Summary -
 footer.orgSalarySummary = Organization Salary Summary -
 footer.orgSalaryStatistics = Organization Salary Statistics -
 footer.orgReasonSummary = Organization Salary Exceptions -
