KULBUD-125: Organization Reason Statistics report class cast exception KULBUD-120: BC Reason Summary returns incident report KULBUD-122: Incident report returned on Reason Summary Report

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
@@ -127,8 +127,8 @@ footer.orgPositionFunding = Organization Position Funding -
 footer.orgMonthlySummary = Organization Monthly Object Summary -
 footer.orgSalarySummary = Organization Salary Summary -
 footer.orgSalaryStatistics = Organization Salary Statistics -
-footer.orgReasonSummary = Organization Salary Exceptions -
-footer.orgReasonStatistics = Organization Salary Exception Statistics -
+footer.orgReasonSummary = Organization Reason Summary -
+footer.orgReasonStatistics = Organization Reason Statistics -
 footer.orgList2PLG = Organization 2PLG List -
 footer.orgSynchronizationProblems = Organization PS Sync Problems - 
 
