KULCAP-1054: Asset separate document now validates asset description and manufacturing fields for blank data.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2127,6 +2127,8 @@ error.asset.authorization = User "{0}" is not authorized to modify asset "{1}".
 # ********** Asset Separate related messages *********
 error.max.payments.limit = Cannot split an asset that contains 10 or more payments.  
 error.capital.asset.type.code.required = Asset Type Code is a required field.
+error.asset.description.required = Asset Description is a required field.
+error.manufacturer.required = Manufacturer is a required field.
 error.total.separate.source.amount.required = Separate Source Amount is required to be a positive amount value.
 error.non.active.capital.asset.required = Only active capital assets can be separated.
 error.total.separate.source.amount.invalid = The total separate source amounts cannot exceed that of capital asset "{0}".
