KULCAP-1061 	 Errors in error message when splitting a line..

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2307,7 +2307,7 @@ cab.changes.saved.success = Changes saved successfully.
 cab.invalid.capital.asset.type.code = Asset Type code {0} is not valid.
 #******** CAB PurAp Line Messages ***
 error.split.qty.required = Split Qty is required for Split action.
-error.split.qty.invalid = Split Qty must a valid value between zero and the current quantity {0}.
+error.split.qty.invalid = Split Qty must be a valid value between 1 and {0}
 error.additional.charges.exist = Additional Charge line items should be allocated before {0}.
 error.po.id.invalid = No PREQ/Credit Memo document for Purchasing Order Id {0}. 
 error.po.id.empty = Purchasing Order Id can not be empty. 
