added error message used in BudgetConstructionLevelSummaryReportServiceImpl

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1528,6 +1528,7 @@ message.budget.accountManagerDelegateList = The initial list contains all budget
 error.budget.report.gettingChartDescription = Error getting chart description
 error.budget.report.gettingObjectCode = Error getting object Code
 error.budget.report.gettingObjectName = Error getting object Name
+error.budget.report.gettingObjectLevelName = Error getting object level Name
 error.budget.report.gettingAccountDescription = Error getting account description
 error.budget.report.gettingSubAccountDescription = Error getting sub-account description
 error.budget.report.gettingOrganizationName = Error getting organization name
