KULCAP-987 	 Barcode Error Document -when lines are unchecked changes are not saved

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2218,6 +2218,7 @@ error.choose.asset.type.validate.location = Asset type value should be specified
 #**** Start - Capital Asset Barcode Inventory
 message.upload.title.barCodeInventory=Barcode Inventory Process
 
+error.checkbox.must.be.checked=The check box at the left of the record must be checked before hitting validate or delete button for the data to be processed. 
 error.uploadFile.invalid.type=The type of selected file is invalid.
 error.document.invalid.field={0} is invalid
 error.document.capitalAsset.not.found=Asset not found
