--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1924,6 +1924,7 @@ error.invoiceItemCode.orgOptionsDoesNotExistForChartAndOrg=Organization Options 
 #error.SystemInformation.salesTaxObjectCodeInvalid=ERROR: Must be of type Income (CH,IC,IH).
 error.SystemInformation.clearingAccountInactive= Clearing Account must not be inactive.
 error.SystemInformation.wireAccountInactive= Wire Account must not be inactive.
+error.SystemInformation.lockboxNumberNotUnique = Lockbox Number must be unique.
 
 #Accounts Receivable: Organization Options errors
 error.document.organizationOptions.sysInfoDoesNotExistForProcessingChartAndOrg=System Information must exist for Processing Chart of Accounts code "{0}" and Processing Organization Code "{1}".
