Lots o' cleanup on the payapp refactoring.  All the quickapply and detailapply work as expected now.  Still some work to do on the invoicePaidApplieds collection, which doesnt clean up right after deleting some.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2061,7 +2061,8 @@ error.document.paymentApplication.nonArLineRequired=Non-AR amount field is requi
 error.document.paymentApplication.nonArLineAmountMustBePositive=Non-AR amount field must be positive.
 error.document.paymentApplication.nonArLineAmountExceedsInvoiceBalance=Non-AR amount cannot exceed the selected invoice balance.
 error.document.paymentApplication.nonArLineAmountExceedsBalanceToBeApplied=Non-AR amount cannot exceed the balance to be applied.
-error.document.paymentApplication.quickAppliedExceedsCashControlTotalAmount=Cannot apply more than the available cash control amount.
+error.document.paymentApplication.quickAppliedExceedsCashControlTotalAmount=Cannot apply more than the available control amount.
+error.document.paymentApplication.detailAppliedExceedsControlTotalAmount=Cannot apply more than the available control amount to an Invoice Item.
 error.document.paymentApplication.AppliedAmountExceedsBalanceToBeApplied=Cannot apply more than the balance to be applied.
 error.document.paymentApplication.unappliedAmountCannotExceedAvailableAmount=Unapplied amount cannot exceed cash control available amount.
 error.document.paymentApplication.unappliedAmountCannotExceedBalanceToBeApplied=Unapplied amount can neither exceed the cash control available amount, nor cause the total amount applied to exceed the cash control available amount.
