--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1255,7 +1255,7 @@ errors.paymentRequest.tax.rate.must.zero.if={1} must be set to zero if {0} is se
 errors.paymentRequest.tax.rate.must.not.zero.if={1} must be set to a non-zero value if {0} is set to the current value.
  
 # error.paymentRequest.init=An error occurred while attempting to create this Payment Request.
-errors.duplicate.vendor.invoice=Warning: A payment request for the specified invoice number already exists.  Do you want to continue?
+errors.duplicate.vendor.invoice=Warning: A payment request for the specified invoice number and vendor ID already exists.  Do you want to continue?
 errors.duplicate.vendor.invoice.cancelledOrVoided=Warning: A cancelled or voided payment request for the specified invoice number already exists.  Do you want to continue?
 errors.duplicate.vendor.invoice.cancelled=Warning: A cancelled payment request for the specified invoice number already exists.  Do you want to continue?
 errors.duplicate.vendor.invoice.voided=Warning: A voided payment request for the specified invoice number already exists.  Do you want to continue?
