added BC message

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1480,6 +1480,7 @@ error.budget.monthlyTotalZero = Monthly budget sum must be non-zero.
 error.budget.salarySumRequestNotEqual = Accounting line {0} salary detail sum ({1}) does not equal request amount ({2}).
 error.budget.fringeBenefitObjectNotAllowed = Add/Update/Delete line using Fringe Benefit Labor Object {0} not allowed.
 error.budget.salarySettingObjectOnly = Only accounting lines using salary detail labor objects are allowed for accounts in {0} group.
+error.budget.salarySettingObjectOnlyNoParameter = Salary Setting Only Fund or SubFund groups system parameter not found, can't validate if line is allowed for fund, sub-fund: {0}.
 
 error.budget.userNotOrgApprover = Access denied, user not a Budget Construction Document approver for any Organization.
 error.budget.userBelowDocLevel = Access denied, user below current document level.
