KULCAP-1050: Changed error message.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2332,7 +2332,7 @@ error.fractional.quanity = Fractional quantity invoiced is allowed only if <1.
 error.merge.with.pretagging = Merge is disallowed because the selected merge lines include more than 1 pre-tagging data entries.
  
 #******** CAB FP Messages ***
-error.asset.do.not.enter.any.data = Only enter data for asset information if it is required per the accounting lines entered.
+error.asset.do.not.enter.any.data = Asset Information is only required for moveable capital object codes.
 error.asset.require.data.entry = Data required for either updating or creating a new asset.
 error.asset.update.allow.only = You cannot create a new asset with this transaction; you must update an existing asset. 
 error.asset.new.or.update.only = Only enter data for either updating or creating a new asset.
