--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1111,7 +1111,7 @@ error.faxNumber.PoTransmissionType=A valid Vendor Fax Number (###-###-####) must
 error.vendorType.invalid=Invalid vendor type. You must select a vendor of type 'PO' for requisition and purchase order.
 error.debarred.vendor=The selected vendor is debarred and therefore cannot be used on this document. Please select a different vendor.
 error.inactive.vendor=The selected vendor is inactive and therefore cannot be used on this document. Please select a different vendor.
-error.nonexist.vendor=The vendor enterred doesn't exist. Please choose from the list of existing vendors.
+error.nonexist.vendor=The vendor entered doesn't exist. Please choose from the list of existing vendors.
 error.requisition.copy.expired.contract=The Requisition cannot be copied because its contract is expired.
 error.requisition.copy.inactive.vendor=The Requisition cannot be copied because its vendor is inactive.
 error.distribute.accounts.not.100.percent=The total percentage of all accounts to be distributed must equal 100%.
