Some preliminary payapp commits for tonight's work.  More coming soon.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2073,6 +2073,8 @@ error.document.paymentApplication.nonInvoicedFinancialObjectRequired=Object code
 error.document.paymentApplication.cannotQuickApplyOnInvoiceWithZeroOpenAmount=Cannot quick-apply to an Invoice with a Zero Open Amount.
 error.document.paymentApplication.unappliedAmountCannotBeEmptyOrZero=Unapplied amount cannot be empty or zero.
 error.document.paymentApplication.unappliedCustomerNumberCannotBeBlank=Customer number on unapplied line cannot be blank.
+error.document.paymentApplication.enteredInvoiceCustomerNumberInvalid=The customer number entered does not exist.
+error.document.paymentApplication.enteredInvoiceNumberInvalid=The invoice number entered does not exist.
 
 # Capital Assets Management
 error.document.records_no_selected=Records were not selected. Please, mark the records you want to delete or validate.
