KULCAP-1030: Error message modified.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2155,7 +2155,7 @@ error.transfer.fund.financial.doc.required = Transfer of funds financial documen
 error.transfer.asset.loaned=Asset is currently on Loan and cannot be transferred until a return document has been issued and approved to return the asset to an on campus location.
 note.asset.loan.active=The asset being transferred is currently on loan.
 error.representative.user.invalid= {0} is not a valid user.
-error.transfer.document.payment.objectcode.doesnt.exists=Payment object code {0} does no exist in fiscal year {1} for chart of asset being transfer to.
+error.transfer.document.payment.objectcode.doesnt.exists=Payment object code {0} does not exist in fiscal year {1} for chart the asset is being transfer to.
 error.invalid.user.group.for.transfer.nonmoveable.asset=Current user can not transfer this non-moveable asset : "{0}".
 # ********** End - Asset Transfer related messages ********
 
