KFSMI-2477: Code review feedback accomodated and file checked added.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2348,3 +2348,35 @@ purchasing.message.system.changed=All Capital Asset information has been cleared
 purchaseOrder.amend.message.change.systemType=The capital asset system type of {0} was changed during a PO amendment
 # data messages
 cab.error.data.edit.lock = This version of data has already been modified by another user. Press the "reload" button to replace your copy with the newer version. 
+
+# Balancing batch process messages
+error.batch.balancing.files=Input files not found or not readable.
+error.batch.balancing.unknown.failure=Process stopped due to %s on line number %d
+message.batch.balancing.data.inserted=%s or %s empty. Use something like the following to populate your local tables. Note obj_id needs to be properly generated (for oracle use sys_guid()). Also your table / field names may be different:\n\n
+message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for universityFiscalYear=%d found. That is out of range and will be deleted.\n"
+message.batch.balancing.failure.count=\nTotal failure count for %s is %d. Only up to %d failures printed.\n
+message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=
+message.batch.balancing.record.failed.balancing=Failed %s balancing
+message.batch.balancing.report.unknown.label=<Unknown Label>
+ld.balancing.report.filename.prefix=laborBalancing_
+message.ld.balancing.report.file.title=Labor Balancing Report
+message.ld.balancing.report.entry.label=LLEN
+message.ld.balancing.report.balance.label=LLBL
+gl.balancing.report.filename.prefix=balancing_
+message.gl.balancing.report.file.title=General Ledger Balancing Report
+message.gl.balancing.report.entry.label=GLEN
+message.gl.balancing.report.balance.label=GLBL
+message.gl.balancing.report.account.balance.label=ACBL
+message.gl.balancing.report.encumbrance.label=GLEC
+message.gl.balancing.report.fiscal.years.included=\u0020                            FISCAL YEARS INCLUDED IN BALANCING              %s\n
+message.gl.balancing.report.obsolete.deleted=\u0020                            OBSOLETE HISTORY DELETED                         %9s\n
+message.gl.balancing.report.updated.skipped=\u0020                            UPDATES SKIPPED DUE TO OUT OF RANGE FISCAL YEAR  %,9d\n
+message.gl.balancing.report.comparision.failure=\u0020                            %s AMOUNT FAILURES   %-25s %,9d\n
+message.gl.balancing.report.entry.sum.row.count.history=\u0020                            %s SUM(ROW COUNT) - CALC. %-20s %,9d\n
+message.gl.balancing.report.entry.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.balance.row.count.history=\u0020                            %s ROW COUNT - CALC. %-25s %,9d\n
+message.gl.balancing.report.balance.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.account.balance.row.count.history=\u0020                            %s ROW COUNT - CALC. %-25s %,9d\n
+message.gl.balancing.report.account.balance.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.encumbrance.row.count.history=\u0020                            %s ROW COUNT - CALC. %-25s %,9d\n
+message.gl.balancing.report.encumbrance.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
