KFSMI-901: Modify how the Account and Sub-Account maintenance document validates the Indirect Cost Recovery Rate code to take advantage of the new ICR rate table

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -913,6 +913,7 @@ error.document.IndirectCostRecovery.fieldMustNotBeDashes=When {0} is {1}, the {2
 error.document.IndirectCostRecovery.accountUseExpenditureEntryWildcardRestrictionOnSubAccount=If the Account Number is @, then the Sub-Account Number must be @ or dashes.
 
 error.document.IndirectCostRecovery.chartMustBeUniversityChart = An error was found while attempting to add a record: {0} is not a University {1}. This item was not added. Valid University Chart Codes are: {2}.
+error.document.IndirectCostRecovery.rateNotFound = ICR rate is not found by {0}-{1}.
 error.document.IndirectCostRecovery.ratePercentsNotEqual = Total credit amount and total debit amount for active ICR Rates must be equal.
 error.document.IndirectCostRecovery.ratePercentsInvalidFormatScale = Rate Percent must have between zero and three decimal places.
 error.document.IndirectCostRecovery.ratePercentsInvalidFormatZero = Rate Percent must greater than zero.
