KULCAP-1076: Asset tag number is now required.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2129,6 +2129,7 @@ error.asset.location.no.asset.location.detail.line = Location change must contai
 error.asset.location.campus.code.required =  A Campus Code is required.
 error.asset.location.building.code.required = A Building code is required.
 error.asset.location.room.number.required = A Room Number is required.
+error.asset.location.tag.number.required = A Tag Number is required.
 error.asset.authorization = User "{0}" is not authorized to modify asset "{1}".
 
 # ********** Asset Separate related messages *********
@@ -2353,8 +2354,8 @@ cab.error.data.edit.lock = This version of data has already been modified by ano
 # Balancing batch process messages
 error.batch.balancing.files=Input files not found or not readable.
 error.batch.balancing.unknown.failure=Process stopped due to %s on line number %d
-message.batch.balancing.data.inserted=%s or %s empty. Use something like the following to populate your local tables. Note obj_id needs to be properly generated (for oracle use sys_guid()). Also your table / field names may be different:\n\n
-message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for universityFiscalYear=%d found. That is out of range and will be deleted.\n"
+message.batch.balancing.data.inserted=%s or %s empty. Use something like the following to populate your local tables. Note obj_id needs to be properly generated (for oracle use sys_guid()). Also your table / field names may be different\:\n\n
+message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for universityFiscalYear\=%d found. That is out of range and will be deleted.\n"
 message.batch.balancing.failure.count=\nTotal failure count for %s is %d. Only up to %d failures printed.\n
 message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=
 message.batch.balancing.record.failed.balancing=Failed %s balancing
@@ -2367,15 +2368,15 @@ message.gl.balancing.report.entry.label=GLEN
 message.gl.balancing.report.balance.label=GLBL
 message.gl.balancing.report.account.balance.label=ACBL
 message.gl.balancing.report.encumbrance.label=GLEC
-message.gl.balancing.report.fiscal.years.included=\u0020                            FISCAL YEARS INCLUDED IN BALANCING              %s\n
-message.gl.balancing.report.obsolete.deleted=\u0020                            OBSOLETE HISTORY DELETED                         %9s\n
-message.gl.balancing.report.updated.skipped=\u0020                            UPDATES SKIPPED DUE TO OUT OF RANGE FISCAL YEAR  %,9d\n
-message.gl.balancing.report.comparision.failure=\u0020                            %s AMOUNT FAILURES   %-25s %,9d\n
-message.gl.balancing.report.entry.sum.row.count.history=\u0020                            %s SUM(ROW COUNT) - CALC. %-20s %,9d\n
-message.gl.balancing.report.entry.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
-message.gl.balancing.report.balance.row.count.history=\u0020                            %s ROW COUNT - CALC. %-25s %,9d\n
-message.gl.balancing.report.balance.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
-message.gl.balancing.report.account.balance.row.count.history=\u0020                            %s ROW COUNT - CALC. %-25s %,9d\n
-message.gl.balancing.report.account.balance.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
-message.gl.balancing.report.encumbrance.row.count.history=\u0020                            %s ROW COUNT - CALC. %-25s %,9d\n
-message.gl.balancing.report.encumbrance.row.count.production=\u0020                            %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.fiscal.years.included=\                             FISCAL YEARS INCLUDED IN BALANCING              %s\n
+message.gl.balancing.report.obsolete.deleted=\                             OBSOLETE HISTORY DELETED                         %9s\n
+message.gl.balancing.report.updated.skipped=\                             UPDATES SKIPPED DUE TO OUT OF RANGE FISCAL YEAR  %,9d\n
+message.gl.balancing.report.comparision.failure=\                             %s AMOUNT FAILURES   %-25s %,9d\n
+message.gl.balancing.report.entry.sum.row.count.history=\                             %s SUM(ROW COUNT) - CALC. %-20s %,9d\n
+message.gl.balancing.report.entry.row.count.production=\                             %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.balance.row.count.history=\                             %s ROW COUNT - CALC. %-25s %,9d\n
+message.gl.balancing.report.balance.row.count.production=\                             %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.account.balance.row.count.history=\                             %s ROW COUNT - CALC. %-25s %,9d\n
+message.gl.balancing.report.account.balance.row.count.production=\                             %s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.encumbrance.row.count.history=\                             %s ROW COUNT - CALC. %-25s %,9d\n
+message.gl.balancing.report.encumbrance.row.count.production=\                             %s ROW COUNT - PROD.                           %,9d\n
